--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
     width: 100%;
     height: 400px;
   }
-.surveyInput {
+textarea {
   height: 200px;
   
   width: 100%;
@@ -35,7 +35,9 @@ body {
   .card {
     min-height: 400px;
   }
-
+.survey {
+  min-height: 300px;
+}
   .boxText {
     color: black;
     font-size: 20px;
